[package]
name = "cloud_play"
version = "0.1.0"
edition = "2018"
authors = ["liberxue <liberxue@gmail.com>"]
description = "A CLI tool to interact with multiple cloud providers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

[lib]
name = "cloud_play"
path = "src/lib.rs"

